[package]
name = "asdfghjkldle"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.51", features = ["derive"]}
clap_derive = "4.5.47"

ratatui = "0.28.0"
crossterm = "0.29.0"

chrono = "0.4.38"       # Date handling
sha2 = "0.10.8"         # Hashing the date
rand = "0.8.5"          # Random number traits
rand_chacha = "0.3.1"   # Seedable PRNG
